tests/ui/feature-gates/feature-gate-const-items-unit-type-default.rs
const _ = {};
//~^ ERROR omitting type on const item declaration is experimental
fn main() {}
